[package]
name = "openweather-async"
version = "0.1.0"
authors = ["kilroy <tsbach@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An async library for use with the openweathermap.org API"


[dependencies]
tokio = { version="0.2.22",  features = ["macros", "tcp", "dns", "io-util"]}
reqwest = "0.10.7"
serde = {version="1.0.114", features = ["derive"]}
serde_json= "1.0"
dotenv = "0.15.0"


