[package]
name = "openweather-async"
version = "0.1.1"
authors = ["kilroy <tsbach@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An async library for use with the openweathermap.org API"
repository = "https://github.com/kilroyjones/openweather-async"
readme = "README.md"

[dependencies]
tokio = { version="1.4", features = ["macros"] }
reqwest = { version = "0.11", default-features = false }
serde = { version="1", features = ["derive"] }
serde_json= "1"

[dev-dependencies]
dotenv = "0.15"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]